[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyivxv"
version = "0.0.1.a1"
authors = [{ name = "takakv" }]
description = "PyIVXV provides cryptographic recipes and primitives used in IVXV"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography"
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "fastecdsa>=3.0.1",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
